# mousex

./: .gitignore  CMakeLists.txt  README.md  mousex.cpp  mousex.h  mousex.rc  resource.h
.github/workflows/: build.yml
res/: MouseX.exe.manifest
